# ai-judge-agent

./: .dockerignore  .editorconfig  .env.example  .env.production  .env.test  .gcloudignore  .gitignore  .ralphrc  .solhint.json  AUDIT-REPORT.md  Anchor.toml  CLAUDE.md  CROSS-AUDIT-REPORT.md  CROSS-WORKTREE-COMPARISON.md  Cargo.toml  Dockerfile  EVAL-CORE-AUDIT.md  EVAL-PIPELINE-REVIEW.md  GSD-FRAMEWORK-REVIEW.md  IMPLEMENTATION-QUALITY.md  KNOWLEDGE.md  MASTRA-REVIEW.md  Makefile  PROCESS-FORENSICS.md  PROMPT-REVIEW.md  README.md  SPECKIT-ANALYSIS.md  TEST-COVERAGE-COMPARISON.md  TEST-COVERAGE-REPORT.md  bunfig.toml  drizzle.config.ts  eslint.config.mjs  local.db  next.config.ts  package-lock.json  package.json  playwright.bdd.config.ts  playwright.config.ts  tsconfig.json  vitest.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP-FULL-VISION.md  ROADMAP.md  STATE.md  config.json
.ralph/: .circuit_breaker_state  .loop_start_sha  .ralph_session  .ralph_session_history  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
.self-improvement/: lessons.md
.specify/: feature.json
contracts/: .env.example  .gas-snapshot  DEPLOY.md  foundry.toml
docs/: DEPLOYMENT-PLAN.md  DESIGN-AUDIT-REPORT.md  E2E-AUDIT-REPORT.md  GSD-CODE-REVIEW.md  PROMPTING.md  QUALITY-EVALUATION-REPORT.md  SDD-FRAMEWORK-COMPARISON.md  TIER1-AUDIT-REPORT.md  agent-team-audit-launch.md  audit-report-2026-04-13.md  audit-skills-toolkit.md  colosseum-copilot-integration.md  e2e-testing-analysis.md  (+10 more)
programs/grant-evaluator/: Cargo.toml
programs/grant-evaluator/src/: lib.rs
(+581 files in other folders)
